--- a/CaronaSocial/Podfile
+++ b/CaronaSocial/Podfile
@@ -15,6 +15,7 @@ target 'CaronaSocial' do
   pod 'KeychainSwift'
   pod 'Firebase/Firestore'
   pod 'FirebaseFirestoreSwift'
+  pod 'Firebase/Storage'
   
   # add pods for any other desired Firebase products
   # https://firebase.google.com/docs/ios/setup#available-pods
