--- a/CaronaSocial/Podfile
+++ b/CaronaSocial/Podfile
@@ -16,6 +16,7 @@ target 'CaronaSocial' do
   pod 'Firebase/Firestore'
   pod 'FirebaseFirestoreSwift'
   pod 'Firebase/Storage'
+  pod 'SkyFloatingLabelTextField', '~> 3.0'
   
   # add pods for any other desired Firebase products
   # https://firebase.google.com/docs/ios/setup#available-pods
